# credit_ard_scraper_bh

./: .gitignore  README.md  main.py  pyproject.toml  requirements.lock.txt  requirements.txt  streamlit_app.py
scrapper/: card_parser.py  reader_llm.py  utils.py
